# cg-trabalho-01

./: CMakeLists.txt  README.md  demo.cpp  demo.h  main.cpp
algorithms/: cohen-sutherland.cpp  graphic-primitives.h  midpoint.cpp  polygon.cpp  scanline.cpp
graphic-primitives/: graphic-primitives.h
graphic-primitives/algorithmns/: cohen-sutherland.cpp  midpoint.cpp  polygon.cpp  scanline.cpp
utils/: sdl-application.cpp  sdl-application.h
